# Document-QA-Chatbot-Using-Llama-3-and-Groq

./: README.md  pyproject.toml
app/: app.py
